--- a/style.css
+++ b/style.css
@@ -8,3 +8,31 @@ body {
   bottom: 0;
   width: 100%;
 }
+#b1 {
+  position: absolute;
+  z-index: 1;
+  top: 1%;
+  left: 1%;
+  width: 15%;
+  height: 20%;
+  background-color: rgb(222, 222, 222);
+  color: rgb(206, 252, 244);
+}
+
+#cars {
+  position: absolute;
+  z-index: 1;
+  top: 20%;
+  left: 0%;
+  width: 100%;
+  height: 20%;
+}
+
+#data {
+  position: absolute;
+  z-index: 1;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 20%;
+}
